--- a/src/App.css
+++ b/src/App.css
@@ -12,15 +12,47 @@
   text-align: center;
 }
 
+.header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .header-title-container {
-  max-width: 384px;
+  smax-width: 384px;
   max-height: 75px;
   margin: 0 auto;
   padding: 15px 30px;
   background-image: url('/title-bg.svg');
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.header-desktop-navbar {
+  max-width: 792px;
+  padding: 0 75px;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+}
+
+.header-button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+  padding: 7px 15px;
+  margin: 0 0 0 10px;
+  color: #232B36;
+  background-color: #FFF4FA;
+  border: 1px solid #392962;
+  border-radius: 15px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .header h1 {
@@ -76,8 +108,9 @@
 }
 
 .nav-image {
-  width: 80px;
-  height: 80px;
+  width: 270px;
+  height: 270px;
+  object-fit: contain;
   margin-bottom: 1rem;
   transition: transform 0.3s ease;
 }
@@ -112,23 +145,6 @@
   padding: 2px 5px;
 }
 
-
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .nav-block:nth-of-type(2) .nav-image {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 /* Mobile Styles */
 @media (max-width: 768px) {
   .header {
@@ -137,6 +153,10 @@
   
   .header h1 {
     font-size: 2.5rem;
+  }
+
+  .header-desktop-navbar {
+    display: none;
   }
   
   .nav {
@@ -156,8 +176,8 @@
   }
   
   .nav-image {
-    width: 60px;
-    height: 60px;
+    width: 136px;
+    height: 136px;
   }
   
   .nav-title {
@@ -174,6 +194,10 @@
   .header h1 {
     font-size: 3.5rem;
   }
+
+  .header-desktop-navbar {
+    display: none;
+  }
   
   .nav {
     max-width: 700px;
@@ -186,8 +210,8 @@
   }
   
   .nav-image {
-    width: 70px;
-    height: 70px;
+    width: 177px;
+    height: 177px;
   }
   
   .nav-title {
