--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,30 +1,19 @@
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 :root {
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #7856A8;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-.primary-text {
-  font-family: "Alumni Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.secondary-text {
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
 }
 
 a {
@@ -32,6 +21,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -40,6 +30,8 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
   background-image: url('/bg-pattern-desktop.svg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -49,6 +41,8 @@ body {
 #root {
   width: 100%;
   height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
@@ -85,3 +79,4 @@ button {
     background-image: url('/bg-pattern-mobile.svg');
   }
 }
+
