--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -523,7 +523,7 @@
 
 .price-text {
   font-family: 'Alumni Sans', sans-serif;
-  font-style: bold;
+  font-weight: bold;
   padding: 8px 16px;
   color: #392962;
   font-size: 36px;
