--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -4,6 +4,7 @@
   padding: 2rem;
   align-self: center;
   text-align: center;
+  text-wrap: nowrap;
 }
 
 .header-container {
@@ -14,8 +15,6 @@
 }
 
 .header-title-container {
-  max-width: 384px;
-  max-height: 75px;
   margin: 0;
   padding: 15px 30px;
   background-image: url('/title-bg.svg');
@@ -613,3 +612,89 @@
   }
 }
 
+.lectures-container {
+  display: flex;
+  gap: 3rem;
+  align-items: center;
+  justify-content: flex-end;
+  min-height: 600px;
+  max-width: 1000px;
+  margin: auto;
+  background-image: url('/services-block-bg.svg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.lectures-images-container {
+  position: absolute;
+  width: 75%;
+  height: 75%;
+  top: 250px;
+  left: 250px;
+  z-index: 1;
+
+}
+
+.lectures-image {
+  width: 300px;
+  height: auto;
+}
+
+.lectures-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 16px;
+}
+
+.speech-bubble {
+  background: white;
+  padding: 10px 20px;
+  max-width: 550px;
+  border-radius: 22px;
+  font-size: 14px;
+  color: #232B36;
+  align-self: start;
+}
+
+.speech-bubble.bottom {
+  align-self: end;
+}
+
+.logos {
+  width: 200px;
+  margin: 0.5rem 0;
+}
+
+.bottom-section {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+  font-family: 'Alumni Sans', sans-serif;
+  font-weight: bold;
+  font-size: 36px;
+}
+
+.price {
+  background: #392962;
+  color: #FFF4FA;
+  padding: 0px 25px;
+  border-radius: 40px;
+  font-weight: bold;
+}
+
+.contact-button {
+  background-image: url('/contact-bg.svg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #3D2B6C;
+  background-color: unset;
+  border: none;
+  padding: 40px 60px;
+  font-weight: bold;
+  cursor: pointer;
+}
