--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -646,6 +646,7 @@
   flex-direction: column;
   gap: 1rem;
   padding: 16px;
+  z-index: 2;
 }
 
 .speech-bubble {
@@ -681,7 +682,7 @@
 .price {
   background: #392962;
   color: #FFF4FA;
-  padding: 0px 25px;
+  padding: 0 25px;
   border-radius: 40px;
   font-weight: bold;
 }
