--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -14,7 +14,8 @@ body.services-page-background .header h1 {
 
 @media (max-width: 768px) {
   body.services-page-background {
-    background-image: url('/bg-pattern-mobile.svg');
+    background-image: none;
+    background-color: #392962;
   }
 }
 
